--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=MVPBussinesCRM
+
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/mvpBusinessCRMAPI
+spring.datasource.username=api_mvpBusinessCRM
+spring.datasource.password=qwerty
