--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=MVPBussinesCRM
-
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/mvpBusinessCRMAPI
 spring.datasource.username=api_mvpBusinessCRM
 spring.datasource.password=qwerty
+spring.datasource.driver-class-name=org.postgresql.Driver
+# JPA
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
