--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: mvpBusinessCRMAPI
+          POSTGRES_USER: api_mvpBusinessCRM
+          POSTGRES_PASSWORD: qwerty
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U api_mvpBusinessCRM -d mvpBusinessCRMAPI"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Check out code
         uses: actions/checkout@v2
