--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     depends_on:
       - db
     command:
-      - ./gradlew build && java -jar build/libs/MVPBussinesCRM-0.0.1-SNAPSHOT.jar
+      - .\gradlew build && java -jar build/libs/MVPBussinesCRM-0.0.1-SNAPSHOT.jar
 
   db:
     image: postgres
