--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       SPRING_DATASOURCE_PASSWORD: qwerty
     depends_on:
       - db
+    networks:
+      - backend
 
   db:
     image: postgres
@@ -24,6 +26,12 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - backend
 
 volumes:
   postgres_data:
+
+networks:
+  backend:
+    driver: bridge
