--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - backend
 
   db:
-    image: postgres
+    image: postgres:15.11-alpine3.21
     restart: always
     environment:
       POSTGRES_USER: api_mvpBusinessCRM
