chore: Add dialect, fix: docker-compose.yml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mvpBusinessCRMAPI
 spring.datasource.username=api_mvpBusinessCRM
 spring.datasource.password=qwerty
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # JPA
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
