--- a/k8s-service.yml
+++ b/k8s-service.yml
@@ -7,6 +7,7 @@ spec:
     app: mvp-business-crm
   ports:
     - protocol: TCP
-      port: 8080
+      port: 80
       targetPort: 8080
-  type: LoadBalancer
+      nodePort: 8080
+  type: NodePort
