--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=MVPBussinesCRM
 # Database
-spring.datasource.url=jdbc:postgresql://185.128.104.194:5432/mvpBusinessCRMAPI
+spring.datasource.url=jdbc:postgresql://localhost:5432/mvpBusinessCRMAPI
 spring.datasource.username=api_mvpBusinessCRM
 spring.datasource.password=qwerty
 spring.datasource.driver-class-name=org.postgresql.Driver
