--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+# Spring-doc
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/docs
+springdoc.swagger-ui.enabled=true
